[tool.poetry]
name = "hwgraderagent"
version = "0.1.0"
description = ""
authors = ["Ferosh Jacob <fjacob1@kennesaw.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.6.0"
google-genai= "1.32.0"
langchain-google-genai="2.1.10"
poetry-core = "^2.1.3"
langchain-core ="0.3.75"
langchain-community="0.3.29"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
